versions/26.2/translated/uk_ua/develop/items/potions.md
---
title: Зілля
description: Дізнайтеся, як додавати власні зілля із різноманітними ефектами моба.
authors:
  - cassiancc
  - dicedpixels
  - Drakonkinst
  - JaaiDead
  - PandoricaVi
---

Зілля — це витратні предмети, що надають сутності ефект. Гравець може варити зілля за допомогою варильної стійки або отримати їх як предмети через різні інші ігрові механіки.

## Власні зілля {#custom-potions}

Так само як предмети та блоки, зілля потрібно зареєструвати.

## Підготовка класів ID зілля {#preparing-your-potion-id-class}

Якщо ви вже виконали кроки, описані на сторінці [створення вашого першого предмета](../items/first-item), цей процес здасться вам дуже знайомим: вам потрібно буде створити класи для зберігання ID ваших зіллів, представлених як `ResourceKey`.

Ці посилання на зілля використовуються для [генерованих даними теґів зілля](../data-generation/tags).

Ви можете помістити цей метод у клас під назвою `ModPotionIds` (або будь-яку іншу назву класу).

::: tip

Mojang теж так робить зі своїми зіллями! Перегляньте клас `PotionIds` для натхнення.

:::

<<< @/reference/26.2/src/main/java/com/example/docs/potion/ModPotionIds.java#mod_potion_ids_class

### Створення зілля {#creating-the-potion}

Почнімо з оголошення поля для тримання вашого екземпляра `Potion`. Ми будемо безпосередньо використовувати клас, що реалізує `ModInitializer` тримай це. Зверніть увагу на використання `Registry.registerForHolder`, оскільки, як і ефекти моба, більшість стандартних методів, які використовують зілля, віддають перевагу їм як голдерам.

<<< @/reference/26.2/src/main/java/com/example/docs/potion/ExampleModPotions.java#register_potion

Ми передаємо екземпляр `MobEffectInstance`, який приймає 3 параметри:

- `Holder<MobEffect> effect` — ефект, представлений як голдер. Тут ми використовуємо наш спеціальний ефект. Крім того, ви можете отримати доступ до усталених ефектів через стандартний клас `MobEffects`.
- `int duration` — тривалість ефекту в ігрових тактах.
- `int amplifier` — підсилювач для ефекту. Наприклад, квапливість II мав би підсилювач 1.

::: info

Щоб створити власний ефект зілля, перегляньте посібник [ефектів](../entities/effects).

:::

### Реєстрація зілля {#registering-the-potion}

У нашому ініціалізаторі ми будемо використовувати подію `FabricBrewingRecipeRegistryBuilder.BUILD`, щоб зареєструвати наше зілля за допомогою методу `BrewingRecipeRegistry.registerPotionRecipe`.

<<< @/reference/26.2/src/main/java/com/example/docs/potion/ExampleModPotions.java#register_recipes

`addMix` приймає 3 параметри:

- `Holder<Potion> from` — початкове зілля, представлене голдером. Зазвичай це може бути пляшка з водою або незграбне зілля.
- `Item item` — предмет, який є основним інгредієнтом зілля.
- `Holder<Potion> to` — отримане зілля, представлене голдером.

Після реєстрації ви можете варити зілля Tater з картоплі.

![Ефект в інвентарі гравця](/assets/develop/tater-potion.png)
